[project]
name = "fnd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.10.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "textstat>=0.7.10",
    "transformers>=4.56.0",
]
